# Shruti

./: .editorconfig  .gitattributes  .gitignore  Directory.Build.props  Directory.Packages.props  README.md  Shruti.sln  architecture.md  features.md  tasks.md
.github/workflows/: windows-ci.yml
docs/: app-compatibility-matrix.md  installer.md  manual-qa-checklist.md  model-catalog.schema.json  privacy-and-diagnostics.md
scripts/: build-whispercpp.ps1  build.ps1  format.ps1  lint.ps1  package-msix.ps1  run-real-transcription.ps1  test.ps1
src/Shruti.App.Package/: Package.appxmanifest
src/Shruti.App.WinUI/: App.xaml  App.xaml.cs  AppComposition.cs  FloatingMicWindow.cs  MainWindow.xaml  MainWindow.xaml.cs  Shruti.App.WinUI.csproj  TranscriptionOptionsProvider.cs  app.manifest
src/Shruti.Audio.Windows/: IWindowsAudioCaptureFactory.cs  IWindowsAudioCaptureSource.cs  IWindowsAudioDeviceCatalog.cs  PcmAudioNormalizer.cs  Shruti.Audio.Windows.csproj  WasapiAudioCaptureFactory.cs  WasapiAudioCaptureSource.cs  WasapiAudioDeviceCatalog.cs  WindowsAudioCaptureDevice.cs  WindowsAudioCaptureModule.cs  WindowsAudioCaptureService.cs  WindowsAudioCaptureSession.cs  WindowsAudioCaptureStoppedEventArgs.cs  WindowsAudioDataAvailableEventArgs.cs  WindowsAudioStreamFormat.cs
src/Shruti.Core/: DictationSessionState.cs  DictationStatus.cs  Shruti.Core.csproj
src/Shruti.Models/: HttpModelDownloadClient.cs  IModelDownloadClient.cs  IModelIntegrityVerifier.cs  IModelManager.cs  ModelCatalog.cs  ModelCatalogEntry.cs  ModelCatalogJson.cs  (+8 more)
src/Shruti.Transcription.WhisperCpp.Native/: CMakeLists.txt
src/Shruti.Transcription.WhisperCpp.Native/include/: shruti_whisper.h
src/Shruti.Transcription.WhisperCpp.Native/src/: shruti_whisper.cpp
src/Shruti.Transcription.WhisperCpp.Native/tests/: smoke.cpp
(+185 files in other folders)
